[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/LiberationSerif-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/GameUI.gd" type="Script" id=2]
[ext_resource path="res://UI/ButtonTheme.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="TimeLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -234.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
align = 2
valign = 3

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.5
margin_top = -39.0
margin_right = 66.5
margin_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="ResumeButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.5
margin_top = -39.0
margin_right = 66.5
margin_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "Resume"

[node name="MainMenuButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.7
anchor_right = 0.5
anchor_bottom = 0.7
margin_left = -66.5
margin_top = -39.0
margin_right = 66.5
margin_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "Main menu"

[node name="NextLevelButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.7
anchor_right = 0.5
anchor_bottom = 0.7
margin_left = -146.5
margin_top = -144.0
margin_right = 146.5
margin_bottom = -66.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "Next level"

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.3
margin_left = -147.5
margin_top = -36.0
margin_right = 147.5
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
align = 1

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
